2008-06-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_draw_hscroll)
	(hildon_pannable_draw_vscroll):
	Use float variables to calculate the size of the scrollbars to
	avoid error propagation and resizing during scrolling.

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_draw_vscroll)
	(hildon_pannable_draw_hscroll):
	Define a minimum size for the scroll bars

	* src/hildon-stackable-window.c
	(hildon_stackable_window_go_home): Fix compilation warning
	(get_last_window): Minor optimizations
	(hildon_stackable_window_class_init): Fix initialization of
	private structure.

2008-06-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c: Fixed typos in doc

2008-06-18  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_scroll):
	Calculate here whether we need to scroll instead of using the booleans
	that tell us whether to /draw/ the scrolling bars.

2008-06-17  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-app-menu.h
	Update API.
	* src/hildon-app-menu.c
	(hildon_app_menu_init, hildon_app_menu_class_init): Remove
	multiple filter groups related code and API. Now we support only
	one filter group.
	* examples/hildon-app-menu-example.c:
	(create_menu):
	Update to reflect API changes.

2008-06-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-stackable-window.c
	(hildon_stackable_window_class_init):
	Add hildon_stackable_window_realize.
	(hildon_stackable_window_realize):
	Append the window type _HILDON_WM_WINDOW_TYPE_STACKABLE to
	the _NET_WM_WINDOW_TYPE hint. Window managers should use this type
	to apply theming and behavior specific to HildonStackableWindow
	windows.

2008-06-12  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-note.c (hildon_note_button_release):
	Close information notes also when tapping on them

2008-06-12  Alejandro G. Castro <alex@igalia.com>
